Fix redeem method so it goes from User model and only accesses current user's rewards. Also change button layout on main page to be aligned to side of page

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -5,11 +5,16 @@ body {
 .big-reward {
 	font-size: 3em;
 	font-weight: bold;
-	line-height: 1em;
+	line-height: 1.2em;
 	margin: 30px 0px;
-	padding: 20px;
+	padding: 25px;
 	color: white;
 	background-color: #1fc29e;
+}
+
+.big-reward-button {
+	margin: 30px 0px;
+	padding: 25px;
 }
 
 /* Custom container */
